# music-sync

./: .env.example  .gitignore  CLAUDE.md  README.md  docker-compose.yml
backend/: Dockerfile  alembic.ini  celerybeat-schedule  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py
backend/app/: main.py
backend/app/api/: dependencies.py
backend/app/api/auth/: dependencies.py  router.py  schemas.py
backend/app/api/playlists/: router.py  schemas.py
backend/app/api/sync/: router.py  schemas.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  playlist_pair.py  provider_token.py  sync_job.py
backend/app/services/: spotify.py  sync_engine.py  ytmusic.py
backend/app/tasks/: celery_app.py  sync_tasks.py
backend/tests/: test_auth.py  test_models.py  test_sync_engine.py
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  main.tsx
frontend/src/api/: auth.ts  playlists.ts  sync.ts
frontend/src/pages/: Connect.tsx  Playlists.tsx  SyncDashboard.tsx
nginx/: nginx.conf
specs/: data-models.md  openapi.yaml
specs/features/: auth.md  background-sync.md  playlists.md  sync.md
