[project]
name = "music-sync-backend"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi[standard]>=0.115.0",
    "uvicorn[standard]>=0.32.0",

    # Music provider clients
    "spotipy>=2.24.0",
    "ytmusicapi>=1.9.0",

    # Database
    "sqlalchemy[asyncio]>=2.0.0",
    "alembic>=1.14.0",
    "asyncpg>=0.30.0",

    # Task queue
    "celery[redis]>=5.4.0",

    # Track matching
    "rapidfuzz>=3.10.0",

    # Configuration & security
    "pydantic-settings>=2.6.0",
    "cryptography>=43.0.0",   # Fernet token encryption
    "itsdangerous>=2.2.0",    # Signed session cookies for OAuth state

    # HTTP client (used by some provider libs and for direct calls)
    "httpx>=0.27.0",
]

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.hatch.build.targets.wheel]
packages = ["app"]
